Update title and content in index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Wanchen Zhang</title>
+<title>Wanchen Zha0</title>
 </head>
 
 <body>
 <h1>Wanchen Zhang</h1>
-<p>Applied Topology / TDA / Dynamical Systems</p>
+<p>Topological Data Analysis / Machine Learning</p>
 </body>
 </html>
