Update header name from 'Zhang' to 'Zhao'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1>Wanchen Zhang</h1>
+<h1>Wanchen Zhao</h1>
 <p>Topological Data Analysis / Machine Learning</p>
 </body>
 </html>
