--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <p>ArXiv: <a href="https://arxiv.org/abs/2509.20921">2509.20921</a></p>
             <ul>
                 <li>Developed a new metric and stability framework for topological and vector-based data summaries.</li>
-            <li>Proved a 1-Lipschitz stability result: summaries are bounded by $\frac{1}{2} W_p$ (Wasserstein distance) of the inputs.</li>
+            <li>Proved a 1-Lipschitz stability result: summaries are bounded by \(\frac{1}{2} W_p\) (Wasserstein distance) of the inputs.</li>
             <li>Guarantees feature robustness for TDA applications in noisy ML environments.</li>
             </ul>
         </div>
@@ -225,7 +225,7 @@
         <div class="card">
             <h3>Geometric Wasserstein Autoencoder</h3>
             <p>Implementing a Variational Autoencoder (VAE) that utilizes the Wasserstein Distance (approximated by Sinkhorn Divergence) to learn latent representations of geometric manifolds, outperforming standard MSE loss in capturing point cloud topology.</p>
-            <a href="https://github.com/yourusername/repo" class="btn">View Code on GitHub</a>
+            <a href="https://github.com/WanchenZ/Geometric-Wasserstein-Autoencoder" class="btn">View Code on GitHub</a>
         </div>
     </section>
 
